tests/unit/default/syntax-error/160-alter-table-dot-name.x.t
---- IN ----
*%table.name|
---- OUT ----
---- ERR ----
syntax: expected `:` or `=>` after `*%table.name` near `|` at position 12 - at line 1
---- EXIT ----
1
